# apex-platform

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.cursor/commands/: designbrainstorm.md  fixandexplain.md  identifyissue.md  suggestbestpractices.md  thinkwithme.md
.github/workflows/: test.yml
apex/: .gitignore  pyproject.toml
apex/migrations/: env.py
apex/scripts/: create_initial_migration.sh  migrate_models.py  run_migrations.sh
conduit/: LICENSE  README.md  pyproject.toml
conduit/docs/development/: AGENT_QUICKSTART.md  README_IMPLEMENTATION.md
conduit/docs/porting/: PYTHON_PORT_GUIDE.md  PYTHON_PORT_ROADMAP.md  PYTHON_PORT_SUMMARY.md
conduit/examples/: README.md  agent_loop.py  agent_sync_example.py  basic_chat.py
conduit/src/conduit/agent/: callbacks.py  loop.py
conduit/src/conduit/flow/: graph.py
conduit/src/conduit/interceptors/: cost_tracking.py  logging.py  retry.py  timeout.py
conduit/src/conduit/memory/: base.py  summarizing.py
conduit/src/conduit/providers/: groq.py  mock.py  openai.py
conduit/src/conduit/rag/: __init__.py  chain.py  splitters.py
conduit/src/conduit/rag/stores/: __init__.py  base.py  memory.py
conduit/src/conduit/streaming/: utils.py
conduit/src/conduit/structured/: __init__.py
conduit/src/conduit/tools/: definition.py
conduit/tests/: conftest.py
conduit/tests/integration/: test_groq.py  test_openai.py  test_rag_chain.py
conduit/tests/unit/: test_cache.py  test_errors.py  test_interceptor_core.py  test_protocols.py  test_rate_limit.py  test_retry.py  test_schema.py  test_streaming.py  test_timeout.py  test_tools.py
docs/: AUTH_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  api-reference.md  architecture.md  installation.md  quickstart.md
docs/deployment/: DOCKER_MIGRATIONS.md
docs/development/: DATABASE_SETUP.md  IMPLEMENTATION_PLAN.md  PROGRESS_TRACKER.md  RAG_TOOL_DESIGN.md  VISION.md
docs/porting/: PYTHON_PORT_QUICK_REFERENCE.md  PYTHON_PORT_README.md
docs/troubleshooting/: FIX_METADATA_ERROR.md  TROUBLESHOOTING_STARTUP.md
examples/: memory_management.py  multi_provider.py  policy_support_agent.py  rag_pipeline.py  streaming.py  structured_output.py  tool_calling.py  with_interceptors.py
migrations/: env.py
migrations/versions/: 43ad7097345b_initial_migration_users_organizations_.py  add_vector_embeddings_table.py  ce486ea2174c_add_agents_knowledge_tools.py
portal/: .dockerignore  README.md  package.json
portal/docs/: FRONTEND_STRUCTURE.md
scripts/: check_ports.sh  clear_cache.sh  seed_data.py  setup_db.py  start_fresh.sh  test_db_connection.sh
src/: huggingface_provider.py
src/app/: page.tsx
src/conduit/: __init__.py
tests/unit/: test_flow.py  (+11 more)
(+277 files in other folders)
