[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
conduit-py = {path = "../conduit", develop = true}
sentence-transformers = ">=2.3.0"
pydantic = "2.10.0"
redis = "5.0.1"
