[tool.poetry]
name = "conduit-py"
version = "0.1.0"
description = "Simple, functional LLM orchestration for Python"
authors = ["Conduit Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "conduit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
httpx = "^0.27"
numpy = "^1.26"
structlog = "^24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
pytest-httpx = "^0.30"
mypy = "^1.8"
ruff = "^0.1"
black = "^24.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = [
    "ANN101",  # Missing self annotations (Python convention doesn't require explicit self types)
    "ANN204",  # Missing return type for __init__ (return None is implicit)
    "ANN401",  # Dynamically typed Any (intentional for context managers and tool returns)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
